# playground-2024

./: .gitignore  .textlintrc.json  README.md  Taskfile.yaml  archive.go  capture.go  cli.go  designdoc.md  docker-compose.yaml  docker-compose.yml  dot_Brewfile  dot_zshrc  go.mod  go.sum  index.html  main.go  menu.go  package.json  pdf.go  pnpm-lock.yaml  prettier.config.mjs  pyproject.toml  serve.go  svelte.config.js  tailwind.config.ts  version.go  vite.config.ts
.certification/: gcp-associate-cloud-engineer.md
.devdev/: README.md
.devdev/localseek/: docker-compose.yml  pyproject.toml
.devdev/localseek/localseek/: cli.py  vd.py
apache-answer/: .gitignore  README.md  docker-compose.yaml
astro-db-try/: README.md
aws-appsync-try/: README.md  appsync_api_key.tf  appsync_datasource.tf  appsync_graphql_api.tf  appsync_resolver_notes.js  appsync_resolver_notes.tf  schema.graphql
aws-codebuild-github-actions-runner/: README.md  codebuild_log.tf  codebuild_project.tf  codebuild_role.tf
aws-cognito-at-edge/: README.md  index.js  package-lock.json  package.json
aws-lambda-web-adapter-go-try/: README.md  Taskfile.yaml  aws.go  go.mod  go.sum  handler.go  main.go
aws-quicksight/: README.md
baselime-try/: README.md
browserbase-try/: README.md  main.ts  package.json  pnpm-lock.yaml
chezmoi-dotfiles/: README.md  dot_Brewfile  dot_vimrc  dot_zshrc
command-r-rye/: README.md  pyproject.toml
contentful-toy-app/: README.md  package-lock.json  package.json
crxjs-vite-try/: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
cubejs-docker/: README.md  docker-compose.yaml
dagu-try/: README.md
debugroll/: __init__.py  logger.py  roller.py
dicedb-try/: README.md  docker-compose.yaml
docling-try/: README.md  pyproject.toml
docling-try/src/: main.py
drizzle-try/: README.md  docker-compose.yml  drizzle.config.ts  package.json  pnpm-lock.yaml
duckdb-s3-read-csv/: README.md  testdata.csv
dynamo-try/: README.md  go.mod  go.sum  main.go
ebitengine-try/: README.md  go.mod  main.go
elastic-apm-try/: Makefile  README.md  Taskfile.yaml  apm-server.yml  docker-compose.esv7.yaml  docker-compose.esv8.yaml  docker-compose.yaml  go.mod  go.sum  main.go
electron-vite-try/: .gitignore  README.md  electron-builder.yml  package.json  pnpm-lock.yaml
es-toolkit-try/: README.md  main.ts  package.json  pnpm-lock.yaml
evidence-try/: README.md  package.json
example/: browse.py
farm-try/: README.md  farm.config.ts  package.json  pnpm-lock.yaml
fyne-try/: README.md  go.mod  main.go
gf-try/: README.md  go.mod  main.go
gitea-docker/: README.md  docker-compose.yaml
github-actions-log-group/: README.md
github-actions-windows/: README.md
github-svg-appearance/: README.md
go-123-iter/: README.md  go.mod  main.go
go-blueprint-try/: README.md
go-echo/: go.mod  main.go
go-fiber-websocket-trace/: README.md  go.mod  go.sum  main.go
go-lo-try/: README.md  go.mod  main.go
go-logrus-try/: README.md  go.mod  main.go
go-screenshot-try/: README.md  go.mod  main.go
go-snaps-try/: README.md  go.mod  main.go  main_test.go
go-subcommands/: README.md  go.mod  main.go
goda-try/: README.md
goja-try/: .gitignore  README.md  go.mod  go.sum  main.go
gotempltry/: README.md  go.mod
grafana-loki-promtail-nginx/: README.md  docker-compose.yml
grafana-prometheus-nginx/: README.md  docker-compose.yml  nginx.conf  prometheus.yml
grafana-tempo-try/: README.md  collector.yaml  docker-compose.yaml  go.mod  main.go  tempo.yaml
haskell-hello/: README.md  haskell-hello.cabal  package.yaml
homebrew-tap/: pinit.rb
hugo-hextra-try/: README.md  go.mod
influxdb-docker/: README.md  docker-compose.yaml
jaeger-docker/: README.md  docker-compose.yaml  go.mod  go.sum  main.go
langchain-pdf-rag-try/: README.md  pyproject.toml
langchain-pdf-rag-try/app/: main.py
lib/: app.py
lightdash-try/: README.md  docker-compose.yml
litestream-tutorial/: .gitignore  README.md  docker-compose.yaml
localseek/: chat.py  cli.py  vd.py  vdqdrant.py
localstack-try/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
localstack-try/.devcontainer/: devcontainer.json
localstack-try/app/: main.py
lua-try/: README.md  main.lua
markitdown-try/: .gitignore  README.md  pyproject.toml
markitdown-try/app/: main.py
medusa-trial/: .gitignore  README.md  docker-compose.yaml
metabase-docker/: Dockerfile  README.md  docker-compose.yaml
mise-try/: README.md
mkcert-try/: README.md
mongo-go-try/: README.md  docker-compose.yaml  go.mod  main.go
monica-docker/: README.md  docker-compose.yaml
n8n-retry/: docker-compose.yaml
next-auth-try/: README.md  next.config.js  package.json  pnpm-lock.yaml
nextjs-biome-try/: README.md  biome.json  package.json  pnpm-lock.yaml
node-sqlite-try/: README.md  package.json  pnpm-lock.yaml
node-ts-try/: README.md  cli.ts  main.ts  package-lock.json  package.json
nomad-nginx/: README.md  app.nomad.hcl
nuclei-try/: README.md
observable-tutorial/: README.md  observablehq.config.ts  package-lock.json
openaidalle-go/: README.md  go.mod  main.go
otel-desktop-viewer-try/: README.md  go.mod  main.go
pagefind-trial/: README.md  app.d.ts  package.json  pnpm-lock.yaml  tsconfig.json
pelican-tutorial/: .gitignore  README.md  pelicanconf.py  pyproject.toml
pelican-tutorial/content/: my-first-content.md
php-ffi-try/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  go.mod  index.php  main.go
pixijs-react/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
playwright-pdf/: README.md  go.mod  go.sum  main.go
playwright-python/: README.md  pyproject.toml
playwright-python/lib/: app.py  logger.py
rye-playwright/: README.md  pyproject.toml
rye-playwright/src/rye_playwright/: app.py
streamlit-uv-try/: README.md  pyproject.toml
streamlit-uv-try/src/streamlit_uv_try/: main.py
(+638 files in other folders)
