[tool.poetry]
name = "localseek"
version = "0.1.0"
description = ""
authors = ["nua <enuesaa@gmail.com>"]
readme = "README.md"
packages = [{include="src"}]

[tool.poetry.dependencies]
python = "3.11.10"
numpy = "^2.1.3"
pandas = "^2.2.3"
requests = "^2.32.3"
redis = "^5.2.0"
sentence-transformers = "^3.3.0"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src.main:main"
