[tool.poetry]
name = "markitdown-try"
version = "0.1.0"
description = ""
authors = ["nua <enuesaa@gmail.com>"]
readme = "README.md"
packages = [
  { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
markitdown = "^0.0.1a2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.main:main"
