[tool.poetry]
name = "playwright-python"
version = "0.1.0"
description = ""
authors = []
packages = [
  { include = "lib" }
]

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.41.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "lib.app:main"
