[project]
name = "rye-playwright"
version = "0.1.0"
description = "Add your description here"
authors = []
dependencies = [
    "playwright>=1.41.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
dev = "rye_playwright.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rye_playwright"]
